envoy/files/etc/envoy/envoy.yml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
  listeners:
  - name: satymathbot
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /dev/stdout
            - name: envoy.access_loggers.file
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                typed_json_format:
                  ua: "%REQ(USER-AGENT)%"
                  method: "%REQ(:METHOD)%"
                  path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                  res: "%RESPONSE_CODE%"
                  id: "%REQ(X-REQUEST-ID)%"
                  upstream: "%UPSTREAM_HOST%"
                path: /var/run/satymathbot/envoy.log
          route_config:
            name: satymathbot
            virtual_hosts:
            - name: satymathbot
              domains: ['*']
              routes:
              - match: { prefix: '/' }
                route: { cluster: satymathbot }
          http_filters:
          - name: envoy.filters.http.router
  - name: satymathbot-health
    address:
      socket_address: { address: 0.0.0.0, port_value: 8081 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /dev/stdout
            - name: envoy.access_loggers.file
              typed_config:
                '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                typed_json_format:
                  ua: "%REQ(USER-AGENT)%"
                  method: "%REQ(:METHOD)%"
                  path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                  res: "%RESPONSE_CODE%"
                  id: "%REQ(X-REQUEST-ID)%"
                  upstream: "%UPSTREAM_HOST%"
                path: /var/run/satymathbot/envoy.log
          route_config:
            name: satymathbot
            virtual_hosts:
            - name: satymathbot
              domains: ['*']
              routes:
              - match: { prefix: '/' }
                route: { cluster: satymathbot-health }
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: satymathbot
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: satymathbot
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              pipe:
                path: /var/run/satymathbot/nginx.sock
  - name: satymathbot-health
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: satymathbot
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              pipe:
                path: /var/run/satymathbot/nginx_health.sock
